# khaleejnode

./: .gitignore  README-COMPLIANCE.md  README-GOLIVE.md  README-TAURI.md  README-VISION.md  README.md  package-lock.json  package.json  requirements.txt  run.py  run_tauri.sh  setup.sh
.agents/skills/airgapped_hardening/: SKILL.md
.claude/: launch.json
benchmark/: __init__.py  degrade.py  evaluate.py  fixtures.py  run_benchmark.py
brain/: __init__.py  cli.py  extractor.py  rules.py  schema.py  vision.py
brain/compliance/: __init__.py  crosschecks.py  engine.py  screening.py  tariff.py
brain/compliance/data/: country_risk.json  dual_use.json  hs_tariff.json
core/: __init__.py  config.py  hardware.py  license.py  refill.py  vault.py
core-rs/: Cargo.toml
core-rs/src/: config.rs  hardware.rs  lib.rs  license.rs  refill.rs  vault.rs
core/keys/: vendor_public.pem
scripts/: build_brain_sidecar.sh
server/: __init__.py  app.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tools/: __init__.py  build_sanctions.py  issue_token.py  keygen.py  preflight.py
ui/: app.js  index.html  styles.css
